[gd_scene load_steps=11 format=2]

[ext_resource path="res://object/enemy/Opossum.gd" type="Script" id=1]
[ext_resource path="res://sprite/enemy/opossum/opossum-1.png" type="Texture" id=2]
[ext_resource path="res://sprite/enemy/opossum/opossum-2.png" type="Texture" id=3]
[ext_resource path="res://sprite/enemy/opossum/opossum-3.png" type="Texture" id=4]
[ext_resource path="res://sprite/enemy/opossum/opossum-4.png" type="Texture" id=5]
[ext_resource path="res://sprite/enemy/opossum/opossum-5.png" type="Texture" id=6]
[ext_resource path="res://sprite/enemy/opossum/opossum-6.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 55.1299

[sub_resource type="CircleShape2D" id=3]
radius = 56.5049

[node name="Opossum" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="ani" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="hitArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitArea"]
shape = SubResource( 3 )

[node name="damageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="damageArea"]
shape = SubResource( 3 )

[node name="flipContainer" type="Node2D" parent="."]

[node name="upRay" type="RayCast2D" parent="flipContainer"]
position = Vector2( -52.8825, 4.48419 )
enabled = true
cast_to = Vector2( -40, 0 )

[node name="downRay" type="RayCast2D" parent="flipContainer"]
position = Vector2( -53.6538, 39.2503 )
enabled = true
cast_to = Vector2( 0, 30 )
